import { IMessageType } from '@protobuf-ts/runtime'
import {
    ClosestPeersRequest,
    ClosestPeersResponse, 
    ConnectivityMethod,  
    ConnectivityRequest, 
    ConnectivityResponse, 
    DisconnectNotice,
    HandshakeRequest, 
    HandshakeResponse, 
    LeaveNotice, 
    Message, 
    PeerDescriptor, 
    PingRequest, 
    PingResponse, 
    FindResponse, 
    FindRequest, 
    RouteMessageAck, 
    RouteMessageWrapper,
    WebsocketConnectionRequest,
    WebsocketConnectionResponse,
    WebRtcConnectionRequest,
    RtcOffer,
    RtcAnswer,
    IceCandidate,
    LockRequest,
    UnlockRequest,
    LockResponse

} from '../proto/packages/dht/protos/DhtRpc'

export const protoClasses: Array<IMessageType<any>> = [
    ClosestPeersRequest,
    ClosestPeersResponse,
    FindRequest,
    FindResponse,
    PingRequest,
    PingResponse,
    LeaveNotice,
    PeerDescriptor,
    ConnectivityMethod,
    DisconnectNotice,
    RouteMessageWrapper,
    RouteMessageAck,
    ConnectivityRequest,
    ConnectivityResponse,
    HandshakeRequest,
    HandshakeResponse,
    Message,
    WebsocketConnectionRequest,
    WebsocketConnectionResponse,
    WebRtcConnectionRequest,
    RtcOffer,
    RtcAnswer,
    IceCandidate,
    LockRequest,
    UnlockRequest,
    LockResponse
]
